// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Posts /> snapshots displays ActivityIndicator while service status is still loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`<Posts /> snapshots displays error message for error service status 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    Oops, I did it again.
  </Text>
</View>
`;

exports[`<Posts /> snapshots displays post list when results have loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;
